Fix: Fix element overlap in about section, fix empty label error in nav dropdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,21 @@ li {
 #nav-dropdown {
     display: none;
 }
+/* Styling to fill the label element with content, but not have anything display on screen,
+this fixes the empty label error */
+.sr-only {
+    border: 0; 
+    clip: rect(0 0 0 0); 
+    -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px); 
+    clip-path: polygon(0px 0px, 0px 0px, 0px 0px); 
+    height: 1px; 
+    margin: -1px; 
+    overflow: hidden; 
+    padding: 0; 
+    position: absolute; 
+    width: 1px; 
+    white-space: nowrap; 
+}
 
 #error-page {
     width: 100%;
@@ -191,7 +206,7 @@ main {
     font-family: "Times New Roman", Times, serif;
     text-align: center;
     margin-bottom: 20px;
-    padding-top: 25px;
+    padding-top: 50px;
 }
 
 #content img {
